[docker] retry apt download at most 3 times
check pip

pedantic pip

remove all update -y

fix pymysql dependencies

OMFG SPARK, DIAF

maybe fic

more pi pfixes

fix

determine p4yj location programatically

remove hardcoded path in shuffler

fix

fix

remove apt changes

iwp

whoops

fix

use hail-pip-install

fix

add retries number

fix

fml

fix

fix makefile

more fixes

fix

fix

fixg

fixes

fix

pin a specific date of ubuntu

fix

fix

fix

simplify py4j

unused

fix

fix query indentation

generous test_ci timeout

remove timeout in test_ci, we already have on in the job

avoid use of hail ubuntu in docker worker

eliminate wait_for

fix

fix

fix

fix

fixes

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,12 +1,11 @@
 FROM {{ service_base_image.image }}
 
-RUN pip3 install --upgrade \
+RUN hail-pip-install \
       google-auth-oauthlib==0.4.1 \
-      google-auth==1.20.0
+      google-auth==1.21.1
 
 COPY auth/setup.py auth/MANIFEST.in /auth/
 COPY auth/auth /auth/auth/
-RUN pip3 install --no-cache-dir /auth && \
-  rm -rf /auth
+RUN hail-pip-install /auth && rm -rf /auth
 
 EXPOSE 5000
