--- a/benchmark-service/Dockerfile
+++ b/benchmark-service/Dockerfile
@@ -4,16 +4,8 @@ COPY benchmark-service/benchmark /benchmark-service/benchmark/
 
 COPY benchmark-service/setup.py benchmark-service/MANIFEST.in  /benchmark-service/
 
-RUN pip3 install --no-cache-dir /benchmark-service && \
-    rm -rf /benchmark-service
-
-RUN pip3 install plotly
-
-RUN pip3 install pandas
-
-RUN pip3 install scipy
-
-RUN pip3 install numpy
+RUN hail-pip-install /benchmark-service && rm -rf /benchmark-service && \
+    hail-pip-install plotly pandas scipy numpy
 
 EXPOSE 5000
 
