--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -2,8 +2,7 @@ FROM {{ service_base_image.image }}
 
 COPY ci/setup.py ci/MANIFEST.in /ci/
 COPY ci/ci /ci/ci/
-RUN pip3 install --no-cache-dir /ci && \
-  rm -rf /ci
+RUN hail-pip-install /ci && rm -rf /ci
 
 EXPOSE 5000
 
