--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,7 +1,10 @@
 include ../config.mk
 
 .PHONY: build
-build: base-stmp service-base
+build: base-stmp service-base hail-ubuntu
+
+BASE_LATEST = gcr.io/$(PROJECT)/hail-ubuntu:latest
+BASE_IMAGE = gcr.io/$(PROJECT)/hail-ubuntu:$(shell docker images -q --no-trunc hail-ubuntu:latest | sed -e 's,[^:]*:,,')
 
 BASE_LATEST = gcr.io/$(PROJECT)/base:latest
 BASE_IMAGE = gcr.io/$(PROJECT)/base:$(shell docker images -q --no-trunc base:latest | sed -e 's,[^:]*:,,')
@@ -15,29 +18,37 @@ HAIL_PUBLIC_IMAGE = gcr.io/$(PROJECT)/hail-public:$(shell docker images -q --no-
 GENETICS_PUBLIC_LATEST = gcr.io/$(PROJECT)/genetics-public:latest
 GENETICS_PUBLIC_IMAGE = gcr.io/$(PROJECT)/genetics-public:$(shell docker images -q --no-trunc genetics-public:latest | sed -e 's,[^:]*:,,')
 
+.PHONY: hail-ubuntu
+hail-ubuntu: hail-ubuntu-stmp
+
+hail-ubuntu-stmp: hail-ubuntu/Dockerfile hail-ubuntu/hail_pip_install hail-ubuntu/pip.conf
+	-docker pull gcr.io/$(PROJECT)/ubuntu:bionic-20200921
+	-docker pull $(HAIL_UBUNTU_LATEST)
+	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' hail-ubuntu/Dockerfile hail-ubuntu/Dockerfile.out
+	docker build -t hail-ubuntu -f hail-ubuntu/Dockerfile.out --cache-from hail-ubuntu,$(HAIL_UBUNTU_LATEST),ubuntu:bionic-20200921 hail-ubuntu
+	touch hail-ubuntu-stmp
+
 .PHONY: base
 base: base-stmp
 
-base-stmp: Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
-	-docker pull gcr.io/$(PROJECT)/ubuntu:18.04
+base-stmp: hail-ubuntu-stmp Dockerfile.base core-site.xml requirements.txt ../pylintrc ../setup.cfg
 	-docker pull $(BASE_LATEST)
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile.base Dockerfile.base.out
 	[ "$(shell bash stat-permissions.sh Dockerfile.base)" = "644" ]
 	[ "$(shell bash stat-permissions.sh core-site.xml)" = "644" ]
 	[ "$(shell bash stat-permissions.sh requirements.txt)" = "644" ]
 	[ "$(shell bash stat-permissions.sh ../pylintrc)" = "644" ]
 	[ "$(shell bash stat-permissions.sh ../setup.cfg)" = "644" ]
-	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' Dockerfile.base Dockerfile.base.out
-	docker build -t base -f Dockerfile.base.out --cache-from base,$(BASE_LATEST),gcr.io/$(PROJECT)/ubuntu:18.04 ..
+	docker build -t base -f Dockerfile.base.out --cache-from base,$(BASE_LATEST),hail-ubuntu ..
 	touch base-stmp
 
 .PHONY: service-base
 service-base: base-stmp
-	-docker pull gcr.io/$(PROJECT)/ubuntu:18.04
 	-docker pull $(SERVICE_BASE_LATEST)
 	python3 ../ci/jinja2_render.py '{"base_image":{"image":"base"}}' Dockerfile.service-base Dockerfile.service-base.out
 	[ "$(shell bash stat-permissions.sh Dockerfile.service-base.out)" = "644" ]
 	[ "$(shell bash stat-permissions.sh service-base-requirements.txt)" = "644" ]
-	docker build -t service-base -f Dockerfile.service-base.out --cache-from service-base,$(SERVICE_BASE_LATEST),base,gcr.io/$(PROJECT)/ubuntu:18.04 ..
+	docker build -t service-base -f Dockerfile.service-base.out --cache-from service-base,$(SERVICE_BASE_LATEST),base,hail-ubuntu ..
 
 .PHONY: hail-public-image
 hail-public-image:
@@ -45,9 +56,9 @@ hail-public-image:
 	cp ../hail/build/deploy/dist/hail-*-py3-none-any.whl hail/
 	cd hail && tar -cvf wheel-container.tar hail-*-py3-none-any.whl
 	-docker pull $(HAIL_PUBLIC_LATEST)
-	python3 ../ci/jinja2_render.py '{"global":{"project":"$(PROJECT)"}}' hail/Dockerfile hail/Dockerfile.out
+	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile.base Dockerfile.base.out
 	docker build hail -f hail/Dockerfile.out -t hail-public \
-     --cache-from hail-public,$(HAIL_PUBLIC_LATEST),ubuntu:18.04 \
+     --cache-from hail-public,$(HAIL_PUBLIC_LATEST)hail-ubuntu \
      hail
 
 .PHONY: genetics-public-image
