--- a/docker/hail/Dockerfile
+++ b/docker/hail/Dockerfile
@@ -1,6 +1,5 @@
-FROM gcr.io/{{ global.project }}/ubuntu:18.04
+FROM {{ hail_ubuntu_image.image }}
 
-ENV LANG C.UTF-8
 ENV MAKEFLAGS -j2
 
 RUN apt-get update && \
@@ -15,7 +14,7 @@ RUN apt-get update && \
     vim \
   && rm -rf /var/lib/apt/lists/*
 COPY hail_pip_version /
-RUN pip3 --no-cache-dir install \
+RUN hail-pip-install \
       hail==$(cat /hail_pip_version) \
       ipython \
       matplotlib \
