--- a/memory/Dockerfile
+++ b/memory/Dockerfile
@@ -2,7 +2,6 @@ FROM {{ service_base_image.image }}
 
 COPY memory/setup.py /memory/
 COPY memory/memory /memory/memory/
-RUN pip3 install --no-cache-dir /memory && \
-  rm -rf /memory
+RUN hail-pip-install /memory && rm -rf /memory
 
 EXPOSE 5000
