--- a/monitoring/Dockerfile
+++ b/monitoring/Dockerfile
@@ -4,7 +4,6 @@ COPY monitoring/monitoring /monitoring/monitoring/
 
 COPY monitoring/setup.py monitoring/MANIFEST.in  /monitoring/
 
-RUN pip3 install --no-cache-dir /monitoring && \
-    rm -rf /monitoring
+RUN hail-pip-install /monitoring && rm -rf /monitoring
 
 EXPOSE 5000
