--- a/build.yaml
+++ b/build.yaml
@@ -1,4 +1,9 @@
 steps:
+ - kind: buildImage
+   name: hail_ubuntu_image
+   dockerFile: docker/hail-ubuntu/Dockerfile
+   contextPath: docker/hail-ubuntu
+   publishAs: hail-ubuntu
  - kind: createNamespace
    name: default_ns
    namespaceName: default
@@ -19,6 +24,8 @@ steps:
    dockerFile: echo/Dockerfile
    contextPath: echo
    publishAs: echo
+   dependsOn:
+     - hail_ubuntu_image
  - kind: deploy
    name: deploy_echo
    namespace:
@@ -89,6 +96,8 @@ steps:
    dockerFile: docker/Dockerfile.base
    contextPath: .
    publishAs: base
+   dependsOn:
+    - hail_ubuntu_image
  - kind: buildImage
    name: service_base_image
    dockerFile: docker/Dockerfile.service-base
@@ -534,7 +543,7 @@ steps:
    contextPath: router
    publishAs: router
    dependsOn:
-     - base_image
+     - hail_ubuntu_image
  - kind: buildImage
    name: batch_image
    dockerFile: batch/Dockerfile
@@ -968,6 +977,7 @@ steps:
    publishAs: hail-base
    dependsOn:
     - build_hail
+    - hail_ubuntu_image
    inputs:
     - from: /wheel-container.tar
       to: /wheel-container.tar
@@ -978,6 +988,7 @@ steps:
    publishAs: hail-base
    dependsOn:
     - build_hail
+    - hail_ubuntu_image
    inputs:
     - from: /wheel-container.tar
       to: /wheel-container.tar
@@ -2193,14 +2204,18 @@ steps:
    name: netcat_ubuntu_image
    dockerFile:
      inline: |
-       FROM gcr.io/{{ global.project }}/ubuntu:18.04
+       FROM {{ hail_ubuntu_image.image }}
        RUN apt-get update && apt-get install netcat -y
+   dependsOn:
+    - hail_ubuntu_image
  - kind: buildImage
    name: curl_image
    dockerFile:
      inline: |
-       FROM gcr.io/{{ global.project }}/ubuntu:18.04
+       FROM {{ hail_ubuntu_image.image }}
        RUN apt-get update && apt-get install curl -y
+   dependsOn:
+    - hail_ubuntu_image
  - kind: runImage
    name: test_memory
    image:
@@ -2681,7 +2696,7 @@ steps:
       namespace:
         valueFrom: default_ns.name
       mountPath: /ssl-config
-   timeout: 2400
+   timeout: 5400
    scopes:
     - test
     - dev
@@ -3111,6 +3126,8 @@ steps:
    dockerFile: blog/Dockerfile.nginx
    contextPath: blog
    publishAs: blog_nginx
+   dependsOn:
+    - hail_ubuntu_image
  - kind: deploy
    name: deploy_blog
    namespace:
@@ -3242,6 +3259,7 @@ steps:
    publishAs: hail-public
    dependsOn:
     - copy_files
+    - hail_ubuntu_image
    inputs:
      - from: /hail_pip_version
        to: /hail_pip_version
