--- a/ci/Dockerfile.test
+++ b/ci/Dockerfile.test
@@ -2,10 +2,6 @@ FROM {{ base_image.image }}
 
 COPY hail/python/setup-hailtop.py /hailtop/setup.py
 COPY hail/python/hailtop /hailtop/hailtop/
-RUN python3 -m pip install --no-cache-dir /hailtop \
-  && rm -rf /hailtop
-
+RUN hail-pip-install /hailtop && rm -rf /hailtop
 COPY ci/test/ /test/
-RUN python3 -m pip install --no-cache-dir \
-  pytest-instafail==0.4.1 \
-  pytest-asyncio==0.10.0
+RUN hail-pip-install pytest-instafail==0.4.1 pytest-asyncio==0.10.0
