--- a/docker/Dockerfile.service-base
+++ b/docker/Dockerfile.service-base
@@ -3,22 +3,20 @@ FROM {{ base_image.image }}
 RUN apt-get update && \
   apt-get -y install \
     build-essential \
+    python3-dev \
   && rm -rf /var/lib/apt/lists/*
 
 COPY docker/service-base-requirements.txt .
-RUN python3 -m pip install --no-cache-dir -U -r service-base-requirements.txt
+RUN hail-pip-install -r service-base-requirements.txt
 
 COPY hail/python/setup-hailtop.py /hailtop/setup.py
 COPY hail/python/hailtop /hailtop/hailtop/
-RUN python3 -m pip install --no-deps --no-cache-dir /hailtop \
-  && rm -rf /hailtop
+RUN hail-pip-install /hailtop && rm -rf /hailtop
 
 COPY gear/setup.py /gear/setup.py
 COPY gear/gear /gear/gear/
-RUN python3 -m pip install --no-deps --no-cache-dir /gear \
-  && rm -rf /gear
+RUN hail-pip-install /gear && rm -rf /gear
 
 COPY web_common/setup.py web_common/MANIFEST.in /web_common/
 COPY web_common/web_common /web_common/web_common/
-RUN pip3 install --no-cache-dir /web_common && \
-  rm -rf /web_common
+RUN hail-pip-install /web_common && rm -rf /web_common
