--- a/hail/Dockerfile.hailtop
+++ b/hail/Dockerfile.hailtop
@@ -2,5 +2,4 @@ FROM {{ base_image.image }}
 
 COPY python/setup-hailtop.py /hailtop/setup.py
 COPY python/hailtop /hailtop/hailtop/
-RUN python3 -m pip install --no-cache-dir /hailtop \
-  && rm -rf /hailtop
+RUN hail-pip-install /hailtop && rm -rf /hailtop
