--- a/query/Dockerfile
+++ b/query/Dockerfile
@@ -2,8 +2,7 @@ FROM {{ service_base_image.image }}
 
 COPY query/setup.py /query/
 COPY query/query /query/query/
-RUN pip3 install --no-cache-dir /query && \
-  rm -rf /query
+RUN hail-pip-install /query && rm -rf /query
 
 COPY query/hail.jar /
 
