--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 # E501 line too long
 # W503 line break before binary operator
-ignore=E501,W503
+extend-ignore=E501,W503
 
 # E402 module level import not at top of file
 # E241 multiple spaces after ','
