remove apt changes

--- a/blog/Dockerfile.nginx
+++ b/blog/Dockerfile.nginx
@@ -1,7 +1,6 @@
 FROM ubuntu:18.04
 
-RUN echo "APT::Acquire::Retries \"3\";" > /etc/apt/apt.conf.d/80-retries && \
-    apt-get update && \
+RUN apt-get update -y && \
     apt-get install -y nginx && \
     rm -rf /var/lib/apt/lists/*
 
