--- a/hail/Dockerfile.hail-pip-installed-python36
+++ b/hail/Dockerfile.hail-pip-installed-python36
@@ -2,8 +2,7 @@ FROM ubuntu:18.04
 
 ENV LANG C.UTF-8
 
-RUN echo "APT::Acquire::Retries \"3\";" > /etc/apt/apt.conf.d/80-retries && \
-  apt-get update && \
+RUN apt-get update && \
   apt-get -y install \
     openjdk-8-jdk-headless \
     python3.6 python3-pip \
