--- a/benchmark/Dockerfile
+++ b/benchmark/Dockerfile
@@ -2,8 +2,8 @@ FROM ubuntu:18.04
 
 ENV LANG C.UTF-8
 
-RUN echo "APT::Acquire::Retries \"3\";" > /etc/apt/apt.conf.d/80-retries && \
-  apt-get update && \
+
+RUN apt-get update && \
   apt-get -y install \
     git \
     htop \
