--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -1,12 +1,13 @@
 FROM ubuntu:18.04
 
+RUN apt-get update -y
+
 # get add-apt-repository
-RUN echo "APT::Acquire::Retries \"3\";" > /etc/apt/apt.conf.d/80-retries && \
-    apt-get update && \
+RUN apt-get update -y && \
     apt-get install -y nginx software-properties-common && \
     bash -c 'DEBIAN_FRONTEND=noninteractive apt-get install -y tzdata' && \
     add-apt-repository -y ppa:certbot/certbot && \
-    apt-get update && \
+    apt-get update -y && \
     apt-get install -y python-certbot-nginx wget && \
     rm -rf /var/lib/apt/lists/*
 
