--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,14 +1,11 @@
 FROM {{ service_base_image.image }}
 
-RUN python3 -m pip install  --use-feature=2020-resolver --upgrade --no-cache-dir \
+RUN hail_pip_install \
       google-auth-oauthlib==0.4.1 \
-      google-auth==1.21.1 && \
-    python3 -m pip check
+      google-auth==1.21.1
 
 COPY auth/setup.py auth/MANIFEST.in /auth/
 COPY auth/auth /auth/auth/
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir /auth && \
-  rm -rf /auth && \
-  python3 -m pip check
+RUN hail_pip_install /auth && rm -rf /auth &&
 
 EXPOSE 5000
