--- a/docker/hail-ubuntu/Dockerfile
+++ b/docker/hail-ubuntu/Dockerfile
@@ -5,3 +5,4 @@ RUN apt-get update && apt-get install -y python3.7 python3.7-dev python3-pip && 
     python3 -m pip install --upgrade --no-cache-dir pip
 COPY pip.conf /root/.config/pip/pip.conf
 COPY hail-pip-install /bin/hail-pip-install
+COPY hail-apt-get-install /bin/hail-apt-get-install
