--- a/docker/Dockerfile.service-base
+++ b/docker/Dockerfile.service-base
@@ -1,10 +1,6 @@
 FROM {{ base_image.image }}
 
-RUN apt-get update && \
-  apt-get -y install \
-    build-essential \
-    python3-dev \
-  && rm -rf /var/lib/apt/lists/*
+RUN hail-apt-get-install build-essential python3-dev
 
 COPY docker/service-base-requirements.txt .
 RUN hail-pip-install -r service-base-requirements.txt
