--- a/build.yaml
+++ b/build.yaml
@@ -1599,6 +1599,7 @@ steps:
    dependsOn:
      - base_image
      - build_site_www
+     - hail_ubuntu_image
  - kind: deploy
    name: deploy_site
    namespace:
@@ -2205,7 +2206,7 @@ steps:
    dockerFile:
      inline: |
        FROM {{ hail_ubuntu_image.image }}
-       RUN apt-get update && apt-get install netcat -y
+       RUN hail-apt-get-install netcat
    dependsOn:
     - hail_ubuntu_image
  - kind: buildImage
@@ -2213,7 +2214,7 @@ steps:
    dockerFile:
      inline: |
        FROM {{ hail_ubuntu_image.image }}
-       RUN apt-get update && apt-get install curl -y
+       RUN hail-apt-get-install curl
    dependsOn:
     - hail_ubuntu_image
  - kind: runImage
