--- a/hail/Dockerfile.hail-build
+++ b/hail/Dockerfile.hail-build
@@ -1,6 +1,3 @@
 FROM {{ base_image.image }}
 
-RUN apt-get update && \
-  apt-get -y install \
-    liblz4-dev \
-    maven
+RUN hail-apt-get-install liblz4-dev maven
