--- a/echo/Dockerfile
+++ b/echo/Dockerfile
@@ -1,3 +1,3 @@
 FROM {{ hail_ubuntu_image.image }}
-RUN apt-get update && apt-get install -y socat
+RUN hail-apt-get-install socat
 CMD ["socat", "TCP4-LISTEN:5000,fork", "EXEC:cat"]
