--- a/hail/Dockerfile.hail-repl
+++ b/hail/Dockerfile.hail-repl
@@ -1,8 +1,6 @@
 FROM {{ base_image.image }}
 ENV PYTHONPATH ""
-RUN apt-get update && \
-  apt-get -y install \
-    liblz4-dev
+RUN hail-apt-get-install liblz4-dev
 COPY wheel-container.tar ./
 RUN tar -xf wheel-container.tar && \
     pip3 install -U hail-*-py3-none-any.whl && \
