use hail-pip-install

--- a/batch/Dockerfile.worker
+++ b/batch/Dockerfile.worker
@@ -1,4 +1,4 @@
-FROM python:3.7-slim-stretch
+FROM {{ hail_ubuntu_image.image }}
 
 RUN apt-get update && \
   apt-get -y install \
@@ -18,25 +18,16 @@ RUN apt-get update && \
   rm -rf /var/lib/apt/lists/*
 
 COPY docker/requirements.txt .
-# re: pip install --upgrade pip: https://github.com/grpc/grpc/issues/22815
-RUN python3 -m pip install --upgrade pip && \
-    python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir -r requirements.txt && \
-    python3 -m pip check
+RUN hail-pip-install -r requirements.txt
 
 COPY hail/python/setup-hailtop.py /hailtop/setup.py
 COPY hail/python/hailtop /hailtop/hailtop/
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir --no-deps /hailtop \
-  && rm -rf /hailtop && \
-  python3 -m pip check
+RUN hail-pip-install --no-deps /hailtop && rm -rf /hailtop
 
 COPY gear/setup.py /gear/setup.py
 COPY gear/gear /gear/gear/
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir --no-deps /gear \
-  && rm -rf /gear && \
-  python3 -m pip check
+RUN hail-pip-install --no-deps /gear && rm -rf /gear
 
 COPY batch/setup.py batch/MANIFEST.in /batch/
 COPY batch/batch /batch/batch/
-RUN pip3 install --use-feature=2020-resolver --upgrade --no-cache-dir /batch && \
-  rm -rf /batch && \
-  python3 -m pip check
+RUN hail-pip-install --no-deps /batch && rm -rf /batch
