--- a/memory/Dockerfile
+++ b/memory/Dockerfile
@@ -2,8 +2,6 @@ FROM {{ service_base_image.image }}
 
 COPY memory/setup.py /memory/
 COPY memory/memory /memory/memory/
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir /memory && \
-  rm -rf /memory && \
-  python3 -m pip check
+RUN hail-pip-install /memory && rm -rf /memory
 
 EXPOSE 5000
