--- a/monitoring/Dockerfile
+++ b/monitoring/Dockerfile
@@ -4,8 +4,6 @@ COPY monitoring/monitoring /monitoring/monitoring/
 
 COPY monitoring/setup.py monitoring/MANIFEST.in  /monitoring/
 
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir /monitoring && \
-    rm -rf /monitoring && \
-  python3 -m pip check
+RUN hail-pip-install /monitoring && rm -rf /monitoring
 
 EXPOSE 5000
