--- a/query/Dockerfile
+++ b/query/Dockerfile
@@ -2,9 +2,7 @@ FROM {{ service_base_image.image }}
 
 COPY query/setup.py /query/
 COPY query/query /query/query/
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir /query && \
-  rm -rf /query && \
-  python3 -m pip check
+RUN hail-pip-install /query && rm -rf /query
 
 COPY query/hail.jar /
 
