--- a/scorecard/Dockerfile
+++ b/scorecard/Dockerfile
@@ -2,9 +2,7 @@ FROM {{ service_base_image.image }}
 
 COPY scorecard/setup.py scorecard/MANIFEST.in /scorecard/
 COPY scorecard/scorecard /scorecard/scorecard/
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir /scorecard && \
-  rm -rf /scorecard && \
-  python3 -m pip check
+RUN hail-pip-install /scorecard && rm -rf /scorecard
 
 EXPOSE 5000
 
