--- a/benchmark-service/Dockerfile
+++ b/benchmark-service/Dockerfile
@@ -4,17 +4,8 @@ COPY benchmark-service/benchmark /benchmark-service/benchmark/
 
 COPY benchmark-service/setup.py benchmark-service/MANIFEST.in  /benchmark-service/
 
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir /benchmark-service && \
-    rm -rf /benchmark-service && \
-    python3 -m pip check
-
-RUN pip3 install plotly
-
-RUN pip3 install pandas
-
-RUN pip3 install scipy
-
-RUN pip3 install numpy
+RUN hail-pip-isntall /benchmark-service && rm -rf /benchmark-service && \
+    hail-pip-install plotly pandas scipy numpy
 
 EXPOSE 5000
 
