--- a/build.yaml
+++ b/build.yaml
@@ -527,6 +527,8 @@ steps:
    dockerFile: batch/Dockerfile.worker
    contextPath: .
    publishAs: batch-worker
+   dependsOn:
+    - hail_ubuntu_image
  - kind: buildImage
    name: test_ci_image
    dockerFile: ci/Dockerfile.test
