--- a/hail/Dockerfile.hail-pip-installed-python37
+++ b/hail/Dockerfile.hail-pip-installed-python37
@@ -11,13 +11,10 @@ RUN apt-get update && \
 
 COPY hail/python/requirements.txt requirements.txt
 COPY hail/python/dev-requirements.txt dev-requirements.txt
-RUN python3 -m pip install --upgrade --no-cache-dir --upgrade pip && \
-  python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir -r requirements.txt -r dev-requirements.txt && \
-  python3 -m pip check
+RUN hail-pip-install -r requirements.txt -r dev-requirements.txt
 
 COPY wheel-container.tar wheel-container.tar
 RUN tar -xf wheel-container.tar && \
-    python3 -m pip install hail-*-py3-none-any.whl && \
-    python3 -m pip check
+    hail-pip-install hail-*-py3-none-any.whl
 
 COPY pylintrc setup.cfg /
