--- a/hail/Dockerfile.hailtop
+++ b/hail/Dockerfile.hailtop
@@ -2,6 +2,4 @@ FROM {{ base_image.image }}
 
 COPY python/setup-hailtop.py /hailtop/setup.py
 COPY python/hailtop /hailtop/hailtop/
-RUN python3 -m pip install --use-feature=2020-resolver --upgrade --no-cache-dir /hailtop && \
-  rm -rf /hailtop && \
-  python3 -m pip check
+RUN hail-pip-install /hailtop && rm -rf /hailtop
