--- a/gateway/Makefile
+++ b/gateway/Makefile
@@ -9,7 +9,7 @@ build:
 	$(MAKE) -C ../docker hail-ubuntu
 	-docker pull $(GATEWAY_LATEST)
 	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile Dockerfile.out
-	docker build -t gateway --cache-from gateway,$(GATEWAY_LATEST),hail-ubuntu .
+	docker build -t gateway -f Dockerfile.out --cache-from gateway,$(GATEWAY_LATEST),hail-ubuntu .
 
 push: build
 	docker tag gateway $(GATEWAY_LATEST)
