--- a/router/Makefile
+++ b/router/Makefile
@@ -8,7 +8,7 @@ build:
 	$(MAKE) -C ../docker hail-ubuntu
 	-docker pull $(ROUTER_LATEST)
 	python3 ../ci/jinja2_render.py '{"hail_ubuntu_image":{"image":"hail-ubuntu"}}' Dockerfile Dockerfile.out
-	docker build -t router --cache-from router,$(ROUTER_LATEST),hail-ubuntu .
+	docker build -t router -f Dockerfile.out --cache-from router,$(ROUTER_LATEST),hail-ubuntu .
 
 .PHONY: push
 push: build
