--- a/benchmark-service/Dockerfile
+++ b/benchmark-service/Dockerfile
@@ -4,7 +4,7 @@ COPY benchmark-service/benchmark /benchmark-service/benchmark/
 
 COPY benchmark-service/setup.py benchmark-service/MANIFEST.in  /benchmark-service/
 
-RUN hail-pip-isntall /benchmark-service && rm -rf /benchmark-service && \
+RUN hail-pip-install /benchmark-service && rm -rf /benchmark-service && \
     hail-pip-install plotly pandas scipy numpy
 
 EXPOSE 5000
