--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -2,7 +2,7 @@ FROM {{ service_base_image.image }}
 
 COPY ci/setup.py ci/MANIFEST.in /ci/
 COPY ci/ci /ci/ci/
-RUN hail-pip-isntall /ci && rm -rf /ci
+RUN hail-pip-install /ci && rm -rf /ci
 
 EXPOSE 5000
 
