--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -6,6 +6,6 @@ RUN hail-pip-install \
 
 COPY auth/setup.py auth/MANIFEST.in /auth/
 COPY auth/auth /auth/auth/
-RUN hail-pip-install /auth && rm -rf /auth &&
+RUN hail-pip-install /auth && rm -rf /auth
 
 EXPOSE 5000
