--- a/site/Makefile
+++ b/site/Makefile
@@ -1,16 +1,41 @@
 include ../config.mk
 
-.PHONY: deployment.yaml build push deploy clean test
+.PHONY: deployment.yaml build push deploy clean test render render-hail-too watch watch-hail-too
 
 IMAGE = gcr.io/$(PROJECT)/site:$(shell docker images -q --no-trunc site | sed -e 's,[^:]*:,,')
+RENDER_COMMAND := PYTHONPATH=$$PYTHONPATH:../web_common:../gear python3 render.py
 
-build:
-	$(MAKE) -C www
+render:
+	$(RENDER_COMMAND)
+
+# For a good development experience, in one terminal window:
+#
+#     (cd www && python3 -m http.server)
+#
+# and in another terminal window:
+#
+#     make render-hail-too
+#
+# If you do not care about the hail docs,
+#
+#     make render
+#
+# will be faster.
+render-hail-too:
+	$(MAKE) -C ../hail hail-docs-no-test batch-docs
+	rsync --archive --verbose ../hail/build/www/docs/ www/docs/
+	$(RENDER_COMMAND)
+
+watch:
+	fswatch -o pages/ templates/ | xargs -n1 -I{} /bin/bash -c '$(RENDER_COMMAND)'
+
+watch-hail-too:
+	fswatch -o ../hail/python/ pages/ templates/ | xargs -n1 -I{} $(MAKE) render-hail-too
+
+build: render
 	-rm -rf www-out
 	rsync --archive \
         --verbose \
-        --exclude='*.xslt' \
-        --exclude='*.md' \
         www/* \
         www-out
 	-rm ../site-www.tar.gz
