--- a/site/Dockerfile
+++ b/site/Dockerfile
@@ -1,6 +1,10 @@
 FROM {{ hail_ubuntu_image.image }}
 
-RUN hail-apt-get-install nginx curl python-minimal
+RUN hail-apt-get-install \
+  nginx \
+  curl \
+  python-minimal \
+  libnginx-mod-http-subs-filter
 
 RUN /bin/sh -c 'curl https://sdk.cloud.google.com | bash' && \
     mv /root/google-cloud-sdk /
