[batch] add close billing project functionality (#9579)
* [batch] add close billing project functionality

* address comments

* rewrite subquery to take advantage of time_completed index

* fix check

* undo accidental change to query

* tweak table format

* add 'deleted' state for billing projects

* oops

* update estimated-current

* fix

* define custom errors

* address comments

* fix check

* address comments

* fix check

* fix check #2

* fix check #3

* fix check-sql

--- a/build.yaml
+++ b/build.yaml
@@ -1983,6 +1983,8 @@ steps:
       script: /io/sql/change_test_worker_pool_size.py
     - name: add-test-dev-to-billing-project-users
       script: /io/sql/add-test-dev-to-billing-project-users.sql
+    - name: add-status-flag-billing-projects
+      script: /io/sql/add-status-flag-billing-projects.sql
    inputs:
     - from: /repo/batch/sql
       to: /io/
