--- a/router/router.nginx.conf.in
+++ b/router/router.nginx.conf.in
@@ -253,6 +253,9 @@ server {
     location / {
         proxy_pass https://auth/;
         include /etc/nginx/proxy.conf;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
 
     listen 443 ssl;
