--- a/build.yaml
+++ b/build.yaml
@@ -2020,15 +2020,15 @@ steps:
    dependsOn:
     - default_ns
     - batch_pods_ns
-    - deploy_router
+#    - deploy_router
     - deploy_batch_sa
     - deploy_batch_sa_batch_pods
-    - create_accounts
+#    - create_accounts
     - batch_image
     - batch_worker_image
     - batch_database
-    - deploy_auth
-    - create_certs
+#    - deploy_auth
+#    - create_certs
  - kind: deploy
    name: deploy_query
    namespace:
